2008-07-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c: Modified TclArgumentGet to reject pure lists
	* generic/tclCmdIL.c: immediately, without search. Reworked setup
	* generic/tclCompile.c: of eoFramePtr, doesn't need the line
	* tests/info.test: information, more sensible to have everything
	on line 1 when eval'ing a pure list. Updated the users of the line
	information to special case this based on the frame type (i.e.
	TCL_LOCATION_EVAL_LIST). Added a testcase demonstrating the new
	behaviour.

2008-07-23  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c (GetCommandSource): added comment with
	explanation and warning for waintainers.

2008-07-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompile.c: Made the new TclEnterCmdWordIndex
	* generic/tclCompile.h: static, and ansified.

	* generic/tclBasic.c: Ansified the new functions. Added missing
	function comments.

	* generic/tclBasic.c: Reworked the handling of bytecode literals
	* generic/tclCompile.c: for #280 to fix the abysmal performance
	* generic/tclCompile.h: for deep recursion, replaced the linear
	* generic/tclExecute.c: search through the whole stack with
	* generic/tclInt.h: another hashtable and simplified the data
	structure used by the compiler (array instead of hashtable).
	Incidentially this also fixes the memory leak reported via [Bug
	2024937].

2008-07-22  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    Added numLevels field to CommandFrame, 
	* generic/tclExecute.c:  let GetCommandSource use it. This solves
	* generic/tclInt.h:      [Bug 2017146]. Thx dgp for the analysis.

2008-07-21  Andreas Kupries <andreask@activestate.com>

	* generic/tclBasic.c: Extended the existing TIP #280 system (info
	* generic/tclCmdAH.c: frame), added the ability to track the
	* generic/tclCompCmds.c: absolute location of literal procedure
	* generic/tclCompile.c: arguments, and making this information